--- a/todo-app/src/home.css
+++ b/todo-app/src/home.css
@@ -4,6 +4,11 @@ body {
   color: var(--text-color);
 }
 
+.home {
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
 .app-container {
   display: flex;
   height: 100vh;
@@ -250,4 +255,11 @@ ux-dialog-container {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.quick-dialog-button {
+  max-width: 200px !important;
+  font-size: 1.3em;
+  margin: 10px;
+
 }
