added a table, completion animation

--- a/todo-app/src/components/action-item-card/action-item-card.css
+++ b/todo-app/src/components/action-item-card/action-item-card.css
@@ -30,8 +30,8 @@
     font-weight: bold;
     line-height: 1.2;
     max-height: 2.4em;
-    overflow: hidden;
-    display: -webkit-box;
+    /* overflow: hidden; */
+    /* display: -webkit-box; */
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
