--- a/todo-app/src/components/action-item-card/action-item-card.css
+++ b/todo-app/src/components/action-item-card/action-item-card.css
@@ -34,6 +34,7 @@
     /* display: -webkit-box; */
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    margin-bottom: 20px;
 }
 
 .status {
@@ -61,7 +62,7 @@
 
 .card-details {
     display: none;
-    margin-top: 10px;
+    margin-top: 20px;
     font-size: 0.8em;
     overflow-y: auto;
     max-height: calc(100% - 80px);
