--- a/todo-app/src/components/action-item-table/action-item-table.css
+++ b/todo-app/src/components/action-item-table/action-item-table.css
@@ -16,6 +16,12 @@
     vertical-align: middle;
 }
 
+.action-item-table th:not(:first-child),
+.action-item-table td:not(:first-child) {
+    min-width: 120px;
+}
+
+
 .action-item-table th:last-child,
 .action-item-table td:last-child {
     border-right: none;
