--- a/todo-app/src/style/global.css
+++ b/todo-app/src/style/global.css
@@ -1,101 +1,120 @@
 /* global.css */
 :root {
-    --background-color: #f0f2f5;
-    --highlight-color: #dadada;
-    --icon-highlight-color: #0e7fac;
-    --icon-highlight-color-rgb: 0, 0, 0, 0.5;
-    --text-color: black;
-    --btn-color: #212529;
-    --btn-border-color: #212529;
-    --background-highlight-color: #d2d2d6;
-    --muted-text-color: #6c757d;
-    --muted-line-color: #ccc;
-    --modal-background: #dadada;
-    --dialog-background: #fff;
-    --todo-color: rgb(169, 59, 59);
-    --bug-color: rgb(235, 146, 78);
-    --test-color: #2b9ecb;
-    --completed-color: rgb(0, 152, 89);
-    --idea-color: #9b9800;
-    --design-color: #9f45ff;
-    --sidebar-rail-color: #ebebeb;
-    --muted-green: rgb(68, 223, 158);
-    /* ... other light mode styles */
+	--background-color: #f0f2f5;
+	--highlight-color: #dadada;
+	--icon-highlight-color: #0e7fac;
+	--icon-highlight-color-rgb: 0, 0, 0, 0.5;
+	--text-color: black;
+	--btn-color: #212529;
+	--btn-border-color: #212529;
+	--background-highlight-color: #d2d2d6;
+	--muted-text-color: #6c757d;
+	--muted-line-color: #ccc;
+	--modal-background: #dadada;
+	--dialog-background: #fff;
+	--todo-color: rgb(169, 59, 59);
+	--bug-color: rgb(235, 146, 78);
+	--test-color: #2b9ecb;
+	--completed-color: rgb(0, 152, 89);
+	--idea-color: #9b9800;
+	--design-color: #9f45ff;
+	--sidebar-rail-color: #ebebeb;
+	--muted-green: rgb(68, 223, 158);
+	/* ... other light mode styles */
 
-    --footer-height: 25px;
-    --footer-background-color: #1e1e23;
+	--footer-height: 25px;
+	--footer-background-color: #1e1e23;
+
+	--critical-color: #ff585b;
+	--warning-color: #c7a200;
+	--complete-color: #41ee95;
 }
 
 body.dark-mode {
-    --background-color: black;
-    --highlight-color: #313138;
-    --icon-highlight-color: #6cd5ff;
-    --icon-highlight-color-rgb: 0, 0, 0, 0.5;
-    --text-color: white;
-    --btn-color: #f8f9fa;
-    --btn-border-color: #f8f9fa;
-    --background-highlight-color: #1a1a1a;
-    --muted-text-color: #6c757d;
-    --modal-background: #171719;
-    --dialog-background: #27272b;
-    --muted-line-color: #2f2f31;
-    --todo-color: rgb(231, 102, 102);
-    --bug-color: rgb(235, 146, 78);
-    --test-color: #6cd5ff;
-    --idea-color: #fffd6c;
-    --design-color: #9f45ff;
-    --completed-color: rgb(68, 223, 158);
-    --sidebar-rail-color: #3b3b44;
-    --muted-green: rgb(68, 223, 158);
-    /* ... other dark mode styles */
+	--background-color: black;
+	--highlight-color: #313138;
+	--icon-highlight-color: #6cd5ff;
+	--icon-highlight-color-rgb: 0, 0, 0, 0.5;
+	--text-color: white;
+	--btn-color: #f8f9fa;
+	--btn-border-color: #f8f9fa;
+	--background-highlight-color: #1a1a1a;
+	--muted-text-color: #6c757d;
+	--modal-background: #171719;
+	--dialog-background: #27272b;
+	--muted-line-color: #2f2f31;
+	--todo-color: rgb(231, 102, 102);
+	--bug-color: rgb(235, 146, 78);
+	--test-color: #6cd5ff;
+	--idea-color: #fffd6c;
+	--design-color: #9f45ff;
+	--completed-color: rgb(68, 223, 158);
+	--sidebar-rail-color: #3b3b44;
+	--muted-green: rgb(68, 223, 158);
+	/* ... other dark mode styles */
 }
 
 .form-control {
-    background-color: var(--background-color);
-    color: var(--text-color);
-    border-color: var(--text-color);
+	background-color: var(--background-color);
+	color: var(--text-color);
+	border-color: var(--text-color);
 }
 
 .form-control:disabled {
-    background-color: var(--highlight-color);
+	background-color: var(--highlight-color);
 }
 
 .btn-outline-custom {
-    color: var(--btn-color) !important;
-    border-color: var(--btn-border-color) !important;
+	color: var(--btn-color) !important;
+	border-color: var(--btn-border-color) !important;
 }
 
 .btn-outline-custom:hover {
-    color: var(--background-color) !important;
-    background-color: var(--btn-color) !important;
-    border-color: var(--btn-border-color) !important;
+	color: var(--background-color) !important;
+	background-color: var(--btn-color) !important;
+	border-color: var(--btn-border-color) !important;
 }
 
 .icon:hover {
-    color: var(--icon-highlight-color);
-    cursor: pointer;
+	color: var(--icon-highlight-color);
+	cursor: pointer;
 }
 
 .todo {
-    color: var(--todo-color);
+	color: var(--todo-color);
 }
 
 .completed {
-    color: var(--completed-color);
+	color: var(--completed-color);
 }
 
 .bug {
-    color: var(--bug-color);
+	color: var(--bug-color);
 }
 
 .test {
-    color: var(--test-color);
+	color: var(--test-color);
 }
 
 .idea {
-    color: var(--idea-color);
+	color: var(--idea-color);
 }
 
 .design {
-    color: var(--design-color);
+	color: var(--design-color);
+}
+
+.critical,
+.high,
+.urgent {
+	background-color: var(--critical-color) !important;
+}
+
+.warning,
+.medium {
+	background-color: var(--warning-color) !important;
+}
+
+.complete {
+	background-color: var(--complete-color) !important;
 }
