--- a/todo-app/src/components/settings-sidebar/settings-sidebar.html
+++ b/todo-app/src/components/settings-sidebar/settings-sidebar.html
@@ -1,16 +1,16 @@
 <template>
-    <require from="./settings-sidebar.css"></require>
-    <div class="settings-view">
-        <h2>Settings</h2>
+	<require from="./settings-sidebar.css"></require>
+	<div class="settings-view">
+		<h2>Settings</h2>
 
-        <section class="settings-section">
-            <h3>Appearance</h3>
-            <button class="btn btn-outline-custom" click.trigger="toggleTheme()">Toggle Theme</button>
-        </section>
+		<section class="settings-section">
+			<h3>Appearance</h3>
+			<button class="btn btn-outline-custom" click.trigger="toggleTheme()">Toggle Theme</button>
+		</section>
 
 
 
-        <section class="settings-section">
+		<!-- <section class="settings-section">
             <h3>Data Management</h3>
 
             <div class="my-2">
@@ -22,8 +22,8 @@
                 <label for="skipDuplicates" class="form-check-label">Do not import duplicates</label>
             </div>
             <button class="btn btn-outline-primary" click.trigger="importData()">Import Data</button>
-        </section>
-    </div>
+        </section> -->
+	</div>
 
-    <tag-pattern-modal></tag-pattern-modal>
+	<tag-pattern-modal></tag-pattern-modal>
 </template>
