--- a/todo-app/src/components/action-item-table/action-item-table.css
+++ b/todo-app/src/components/action-item-table/action-item-table.css
@@ -239,3 +239,8 @@
     color: var(--icon-highlight-color);
     font-weight: 600;
 }
+
+.checkbox-column {
+    width: 30px;
+    align-items: center;
+}
