--- a/todo-app/src/style/global.css
+++ b/todo-app/src/style/global.css
@@ -1,4 +1,10 @@
 /* global.css */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
+
+body {
+	font-family: "Poppins", sans-serif;
+}
+
 :root {
 	--background-color: #f0f2f5;
 	--highlight-color: #dadada;
