--- a/todo-app/src/components/action-item-table/action-item-table.css
+++ b/todo-app/src/components/action-item-table/action-item-table.css
@@ -1,48 +1,48 @@
 .action-item-table {
-    width: 100%;
-    border-collapse: separate;
-    border-spacing: 0;
-    border: 1px solid var(--muted-line-color);
-    border-radius: 10px;
-    overflow: hidden;
+	width: 100%;
+	border-collapse: separate;
+	border-spacing: 0;
+	border: 1px solid var(--muted-line-color);
+	border-radius: 10px;
+	overflow: hidden;
 }
 
 .action-item-table th,
 .action-item-table td {
-    padding: 10px;
-    border-bottom: 1px solid var(--muted-line-color);
-    border-right: 1px solid var(--muted-line-color);
-    text-align: left;
-    vertical-align: middle;
+	padding: 10px;
+	border-bottom: 1px solid var(--muted-line-color);
+	border-right: 1px solid var(--muted-line-color);
+	text-align: left;
+	vertical-align: middle;
 }
 
 .action-item-table th:not(:first-child),
 .action-item-table td:not(:first-child) {
-    min-width: 120px;
+	min-width: 120px;
 }
 
 
 .action-item-table th:last-child,
 .action-item-table td:last-child {
-    border-right: none;
+	border-right: none;
 }
 
 .action-item-table tr:last-child td {
-    border-bottom: none;
+	border-bottom: none;
 }
 
 .action-item-table th {
-    background-color: var(--dialog-background);
-    color: var(--text-color);
-    font-weight: bold;
+	background-color: var(--dialog-background);
+	color: var(--text-color);
+	font-weight: bold;
 }
 
 .action-item-table td.completed {
-    color: var(--muted-text-color);
-    /* text-decoration: line-through;
+	color: var(--muted-text-color);
+	/* text-decoration: line-through;
     text-decoration-color: rgba(255, 255, 255, 0.75);
     text-decoration-thickness: 1px; */
-    font-style: italic;
+	font-style: italic;
 }
 
 /* .action-item-table td.completed {
@@ -61,186 +61,188 @@
 } */
 
 .action-item-table tr:nth-child(even) {
-    background-color: var(--dialog-background);
+	background-color: var(--dialog-background);
 }
 
 .action-item-table tr:hover {
-    background-color: rgba(0, 0, 0, 0.05);
+	background-color: rgba(0, 0, 0, 0.05);
 }
 
 .action-item-table .overdue {
-    background-color: rgba(255, 0, 0, 0.1);
+	background-color: rgba(255, 0, 0, 0.1);
 }
 
 .action-item-table button {
-    margin-right: 5px;
-    padding: 5px 10px;
-    border: none;
-    border-radius: 3px;
-    background-color: var(--dialog-background);
-    color: var(--text-color);
-    cursor: pointer;
+	margin-right: 5px;
+	padding: 5px 10px;
+	border: none;
+	border-radius: 3px;
+	background-color: var(--dialog-background);
+	color: var(--text-color);
+	cursor: pointer;
 }
 
 .action-item-table button:hover {
-    opacity: 0.8;
+	opacity: 0.8;
 }
 
 .custom-checkbox {
-    display: block;
-    position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
-    cursor: pointer;
-    font-size: 22px;
-    user-select: none;
+	display: block;
+	position: relative;
+	padding-left: 35px;
+	padding: 15px;
+	/* margin-bottom: 12px; */
+	/* margin-top: 12px; */
+	cursor: pointer;
+	font-size: 22px;
+	user-select: none;
 }
 
 .custom-checkbox input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
+	position: absolute;
+	opacity: 0;
+	cursor: pointer;
+	height: 0;
+	width: 0;
 }
 
 .checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 25px;
-    width: 25px;
-    background-color: #eee;
-    border-radius: 4px;
-    transition: all 0.3s ease;
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 25px;
+	width: 25px;
+	background-color: #eee;
+	border-radius: 4px;
+	transition: all 0.3s ease;
 }
 
 .custom-checkbox:hover input~.checkmark {
-    background-color: #ccc;
+	background-color: #ccc;
 }
 
 .custom-checkbox input:checked~.checkmark {
-    background-color: var(--completed-color);
+	background-color: var(--completed-color);
 }
 
 .checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
+	content: "";
+	position: absolute;
+	display: none;
 }
 
 .custom-checkbox input:checked~.checkmark:after {
-    display: block;
+	display: block;
 }
 
 .custom-checkbox .checkmark:after {
-    left: 9px;
-    top: 5px;
-    width: 7px;
-    height: 13px;
-    border: solid white;
-    border-width: 0 3px 3px 0;
-    transform: rotate(45deg);
-    transition: all 0.2s ease;
+	left: 9px;
+	top: 5px;
+	width: 7px;
+	height: 13px;
+	border: solid white;
+	border-width: 0 3px 3px 0;
+	transform: rotate(45deg);
+	transition: all 0.2s ease;
 }
 
 /* Animation */
 .custom-checkbox.animate .checkmark {
-    animation: checkbox-pop 0.2s ease !important;
+	animation: checkbox-pop 0.2s ease !important;
 }
 
 .custom-checkbox.animate input:checked~.checkmark:after {
-    animation: check-animation 0.2s ease !important;
+	animation: check-animation 0.2s ease !important;
 }
 
 @keyframes checkbox-pop {
-    0% {
-        transform: scale(1);
-    }
+	0% {
+		transform: scale(1);
+	}
 
-    50% {
-        /* transform: scale(1.2); */
-        transform: scale(1.4);
-    }
+	50% {
+		/* transform: scale(1.2); */
+		transform: scale(1.4);
+	}
 
-    100% {
-        transform: scale(1);
-    }
+	100% {
+		transform: scale(1);
+	}
 }
 
 @keyframes check-animation {
-    0% {
-        height: 0;
-        width: 0;
-        opacity: 1;
-    }
+	0% {
+		height: 0;
+		width: 0;
+		opacity: 1;
+	}
 
-    20% {
-        height: 5px;
-        width: 5px;
-        opacity: 1;
-    }
+	20% {
+		height: 5px;
+		width: 5px;
+		opacity: 1;
+	}
 
-    /* 60% {
+	/* 60% {
         height: 10px;
         width: 5px;
         opacity: 1;
     } */
 
-    100% {
-        height: 13px;
-        width: 7px;
-        opacity: 1;
-    }
+	100% {
+		height: 13px;
+		width: 7px;
+		opacity: 1;
+	}
 }
 
 .action-item-table th {
-    position: relative;
-    padding-right: 30px;
-    /* Make room for icons */
+	position: relative;
+	padding-right: 30px;
+	/* Make room for icons */
 }
 
 .sort-icons {
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-    margin-right: 5px;
+	position: absolute;
+	right: 20px;
+	top: 50%;
+	transform: translateY(-50%);
+	margin-right: 5px;
 }
 
 .sort-icons i,
 .bi-funnel {
-    cursor: pointer;
-    margin-left: 5px;
-    opacity: 0.5;
-    transition: opacity 0.2s ease;
+	cursor: pointer;
+	margin-left: 5px;
+	opacity: 0.5;
+	transition: opacity 0.2s ease;
 }
 
 .sort-icons i:hover,
 .bi-funnel:hover {
-    opacity: 1;
+	opacity: 1;
 }
 
 .sort-icons i.active,
 .bi-funnel.active {
-    opacity: 1;
-    color: var(--primary-color);
+	opacity: 1;
+	color: var(--primary-color);
 }
 
 .bi-funnel {
-    position: absolute;
-    right: 5px;
-    top: 50%;
-    transform: translateY(-50%);
+	position: absolute;
+	right: 5px;
+	top: 50%;
+	transform: translateY(-50%);
 }
 
 .bi-funnel.active,
 .sort-icons i.active {
-    color: var(--icon-highlight-color);
-    font-weight: 600;
+	color: var(--icon-highlight-color);
+	font-weight: 600;
 }
 
 .checkbox-column {
-    width: 30px;
-    align-items: center;
+	width: 30px;
+	align-items: center;
 }
