--- a/todo-app/src/routes/quick-todo-page/quick-todo-page.css
+++ b/todo-app/src/routes/quick-todo-page/quick-todo-page.css
@@ -12,7 +12,7 @@
 }
 
 .quick-todo-container {
-	width: 50vw;
+	width: 75vw;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -135,9 +135,6 @@
 	border-radius: 5px;
 }
 
-/* Keep all existing styles unchanged */
-
-/* Updated styles for the recently added items list */
 
 .recently-added-section.styled-list {
 	width: 100%;
@@ -208,4 +205,37 @@
 .recently-added-item .item-time {
 	font-size: 0.8em;
 	color: #aaa;
+}
+
+.quick-todo-input-wrapper {
+	display: flex;
+	align-items: flex-start;
+	flex-grow: 1;
+	margin-right: 10px;
+}
+
+.quick-todo-input-wrapper i {
+	font-size: 1.5em;
+	color: var(--muted-text-color);
+	margin-right: 10px;
+	margin-top: 10px;
+}
+
+.quick-todo-input-wrapper textarea {
+	flex-grow: 1;
+	font-size: 1.5em;
+	padding: 10px;
+	border: none;
+	background-color: transparent;
+	color: var(--text-color);
+	outline: none;
+	resize: none;
+	overflow: hidden;
+	min-height: 40px;
+}
+
+.quick-todo-save-btn {
+	white-space: nowrap;
+	align-self: flex-start;
+	margin-top: 10px;
 }
